@@ -1452,7 +1452,9 @@ typedef struct __cob_file {
 	unsigned int		trace_io:1;		/* Display I/O record when TRACE READY */
 	unsigned int		io_stats:1;		/* Report I/O statistics for this file */
 	unsigned int		flag_keycheck:1;	/* INDEXED file keys must match */
-	unsigned int		unused_bits:30;
+	unsigned int		flag_file_map:1;	/* Filename Mapping was checked */
+	unsigned int		flag_redef:1;	/* File format has been redefined */
+	unsigned int		unused_bits:27;
 
 	cob_field		*last_key;		/* Last field used as 'key' for I/O */
 	unsigned char		last_operation;		/* Most recent I/O operation */
