@@ -1,4 +1,9 @@
 
+2019-10-26  Ron Norman <rjn@inglenet.com>
+
+	* fileio.c: work on handling file definition parameters in IO_filename
+	          RELATIVE file now returns status 10 for end of file
+
 2019-10-25  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: split read/write dictionary routines for future uses
